package pattern;

public interface Observer {
    void update(String event);
}
